--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -59,6 +59,7 @@
         </div>
     </div>
 
+    <!-- DETALLES/INFORMACION DE TU CAJITA -->
     <div class="report enphasisSecond hide formDetalleBox">
         <h4 class="enphasis center">Tu cajita</h4>
         <h2 class="enphasis name-box pad">ALQUILER</h2>
@@ -84,6 +85,7 @@
         </div>
     </div>
 
+    <!-- CREAR UNA NUEVA CAJITA -->
     <div class="new-box hide formAddBox">
         <div class="formHeadAddBox">
             <button>atras</button>
@@ -114,7 +116,7 @@
                     </div>
                 </div>
             </div>
-            <p class="enphasis margin">Si no está, define tu propia cajita:</p>
+            <p class="enphasis">Si no está, define tu propia cajita:</p>
             <input type="text" class="name-box margin custom-input-text">
             <button class="btn-red-c" (click)="addNameNewBox()">Siguiente</button>
         </div>
@@ -151,11 +153,11 @@
         <div class="star-content">
             <img class="star" src="../../../assets/star.svg" alt="">
         </div>
-        <h3>¡Felicidades por tu nueva cajita! </h3>
-        <p>Tú código es:</p>
-        <p>44565444-ALQ1</p>
-        <p>Puedes encontrarlo al revisar el estado de tu cajita.</p>
-        <p>¡Si deposítas 17.80 soles diariamente en tu cajita, conseguirás tu meta en el tiempo establecido! </p>
+        <h3 class="enphasis">¡Felicidades por tu nueva cajita! </h3>
+        <p class="enphasisSecond margin">Tú código es:</p>
+        <p class="enphasis margin">44565444-ALQ1</p>
+        <p class="enphasisSecond margin">Puedes encontrarlo al revisar el estado de tu cajita.</p>
+        <p class="enphasis margin">¡Si deposítas 17.80 soles diariamente en tu cajita, conseguirás tu meta en el tiempo establecido! </p>
         <button class="btn-red-c" (click)="listo()">Listo</button>
     </div>
 </div>
