--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,8 +1,7 @@
 <div >
     <div class="center">
-        <p class="enphasis center">Yunta es tu aliado en el camino a <br> cumplir tus metas</p>
+        <p class="enphasis center e-title">Ayu es tu aliado en el camino a <br> cumplir tus metas</p>
         <img class="" src="assets/family/familyInLivingRoom.png" alt="">
-    
     </div>
     <div class="enphasisSecond">
         <p class="enphasis">Iniciar sesión</p>
@@ -13,5 +12,5 @@
         <input class="custom-input-text width-input" [(ngModel)]="titularContra" type="password" required 
             name="" id="">
     </div>
-    <button class="btn-red-c disablet ">Entrar</button>
+    <button class="btn-red-c">Entrar</button>
 </div>
