--- a/src/app/components/first-view/first-view.component.html
+++ b/src/app/components/first-view/first-view.component.html
@@ -1,11 +1,10 @@
-<div class="center">
-    <div class="top-bottom">
+<div class="top-bottom">
+    <div class="center">
         <img src="assets/logo.svg" alt="logo">
-        <img src="assets/family/completeFamily.png" alt="">
+        <img class="portada-principal" src="assets/family/completeFamily.png" alt="">
     </div>
-    <button class="btn-red-principal" routerLink="register"> ¿Nuevo por aquí?
-    </button>
-    <button class="btn-outline-red" routerLink="home"> ¡Revisa tus ahorros!
-    </button>
-
+    <div class="center">
+        <button class="btn-red-principal" routerLink="register">¿Nuevo por aquí?</button>
+        <button class="btn-outline-red" routerLink="home"> ¡Revisa tus ahorros!</button>
+    </div> 
 </div>
