--- a/src/app/components/first-view/first-view.component.scss
+++ b/src/app/components/first-view/first-view.component.scss
@@ -1,5 +1,8 @@
 @import "/src/styles.scss";
 .top-bottom{
-margin-top:40px;
-margin-bottom:20px;
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+.portada-principal {
+    width: 100%;
 }
