--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,16 +65,6 @@ body {
     border: 3px solid $colorprimario2;
     border-radius: 7px;
 }
-// .box-content {
-//     border-radius: 7px;
-//     width: 180px;
-//     height: 100px;
-//     display:flex;
-//     flex-direction: row;
-//     box-sizing: border-box;
-//     background-color: $colorprimario2;
-//     margin: 7px;
-// }
 .wrap {
     display: flex;
     box-sizing: border-box;
@@ -86,4 +76,21 @@ body {
 }
 .width-input {
     width: 100%;
+}
+.e-title {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 23px;
+}
+.portada-img{
+    margin: 0 25px;
+    width: 90%;
+}
+.margin {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.margin2 {
+    margin-left: 15px;
+    margin-right: 15px;
 }
