--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,11 @@
+<div class="modal-bg center">
+    <div class="box-modal center">
+      <p>¡Felicidades, <br> estas un paso mas <br> cerca de cumplir tus<br> metas!</p>
+      <p class="plus">+</p>
+      <img class="img-box" src="assets/family/familyOfThree.png">
+    </div>
+  </div>
+
 <div class="welcome enphasisSecond ">
     <div class="formWelcome">
         <h1 class="enphasis">¡Bienvenida Familia (nombre)!</h1>
