--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -140,7 +140,7 @@ th {
 }
 .progress-bar2 {
   width: 100%;
-  .progress-bar2::-webkit-progress-bar{
+  .progress-bar2::-webkit-progress-bar {
     background-color: #f3f3f3;
     border-radius: 9px;
   }
@@ -149,11 +149,41 @@ th {
     border-radius: 9px;
   }
 }
-progress::-webkit-progress-bar{
+progress::-webkit-progress-bar {
   background-color: #f3f3f3;
   border-radius: 9px;
 }
 progress::-webkit-progress-value {
   background: $colorsecundario2;
   border-radius: 9px;
+}
+
+.modal-bg {
+  background-color: rgba(128, 128, 128, 0.145);
+  width: 100vp;
+  height: 100vp;
+  margin: 0;
+  box-sizing: content-box;
+  z-index: +1;
+  p{
+    color:$colorprimario2;
+  }
+  .plus{
+    font-size:40px;
+    transform: rotate(45deg);
+    margin:0;
+    z-index:3;
+    position: relative;
+  }
+  .box-modal {
+    box-sizing: border-box;
+    border-radius: 20px;
+    background: rgba(223, 165, 165, 0.165);
+    width: 250px;
+    height: 330px;
+  }
+
+  .img-box {
+    width: 200px;
+  }
 }
