fix change route in register

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,15 +8,15 @@
 
 <div class="welcome enphasisSecond ">
     <div class="formWelcome">
-        <h1 class="enphasis">¡Bienvenida Familia (nombre)!</h1>
-        <div class="level-content">
+        <h1 class="enphasis center">¡Bienvenida Familia (nombre)!</h1>
+        <div class="level-content center">
             <p class="margin">Nivel Ahorrado:</p>
             <div class="star-content">
                 <img src="../../../assets/starLevel.svg" alt="">
             </div>
         </div>
-        <p class="margin">Este mes has ahorrado :</p>
-        <p class="total enphasis margin">S./ 430.00</p>
+        <p class="margin center">Este mes has ahorrado :</p>
+        <p class="total enphasis center margin">S./ 430.00</p>
 
         <div>
             <div class="center">
