--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -3,14 +3,16 @@
         <p class="enphasis center e-title">Ayu es tu aliado en el camino a <br> cumplir tus metas</p>
         <img class="" src="assets/family/familyInLivingRoom.png" alt="">
     </div>
-    <div class="enphasisSecond">
-        <p class="enphasis">Iniciar sesión</p>
+    <div class="enphasisSecond margin2">
+        <p class="enphasis e-title">Iniciar sesión</p>
         <p>Ingresa tu DNI</p>
         <input class="custom-input-text width-input" [(ngModel)]="titularNombre" type="text" placeholder="45983709"
             name="" id="">
         <p>Ingresa tu contraseña</p>
         <input class="custom-input-text width-input" [(ngModel)]="titularContra" type="password" required 
             name="" id="">
-    </div>
-    <button class="btn-red-c">Entrar</button>
+        <div class="center margin">
+            <button class="btn-red-c">Entrar</button>
+        </div> 
+    </div>       
 </div>
