add bg into div

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
 
 <div class="welcome enphasisSecond ">
     <div class="formWelcome">
-        <h1 class="enphasis center">¡Bienvenida Familia (nombre)!</h1>
+        <h1 class="enphasis ">¡Bienvenida <br>Familia (nombre)!</h1>
         <div class="level-content center">
             <p class="margin">Nivel Ahorrado:</p>
             <div class="star-content">
