--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="welcome enphasisSecond ">
+    <!--  -->
     <div class="formWelcome">
         <h1 class="enphasis">¡Bienvenida Familia (nombre)!</h1>
         <div class="level-content">
@@ -9,7 +10,6 @@
         </div>
         <p class="margin">Este mes has ahorrado :</p>
         <p class="total enphasis margin">S./ 430.00</p>
-
         <div>
             <div class="center">
                 <div class="boxes-content">
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <p class="enphasis">Si no está, define tu propia cajita:</p>
-            <input type="text" class="name-box margin custom-input-text" [ngModel]="nameOfBox">
+            <input type="text" class="name-box margin custom-input-text">
             <button class="btn-red-c" (click)="addNameNewBox()">Siguiente</button>
         </div>
         <div class="hide formMontoBox">
