--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -69,14 +69,14 @@
   padding: 10px 0;
 }
 .codigo {
-  font-size: 25px;
+  font-size: 22px;
   font-weight: bold;
 }
 
-/*.progress-bar2 {
+.progress-bar2 {
   width: 100%;
   height: 60px;
-}*/
+}
 
 .item-deposito {
   background-color: pink;
@@ -84,6 +84,7 @@
   justify-content: space-around;
   height: 20px;
   padding: 10px;
+  margin-bottom: 7px;
 }
 th {
   font-size: 20px;
@@ -197,4 +198,9 @@ progress::-webkit-progress-value {
   height: 20%;
   margin: 15px;
   border-radius: 110px;
+}
+.es-title {
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 23px;
 }
