Guarda document(cajita) en colección de metas

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -184,7 +184,7 @@
         </div>
         
         <p class="enphasisSecond margin pad">Tú código es:</p>
-        <h2 class="enphasis margin">44565444-{{nameOfBox}}</h2>
+        <h2 class="enphasis margin">{{codigoConcatenado}}</h2>
         <p class="enphasisSecond margin pad">Puedes encontrarlo al revisar el estado de tu cajita.</p>
         <p class="enphasis margin margin2">¡Si deposítas 17.80 soles diariamente en tu cajita, conseguirás tu meta en el tiempo establecido! </p>
         <div class="center margin pad">
