--- a/src/app/components/nav-bar-bottom/nav-bar-bottom.component.html
+++ b/src/app/components/nav-bar-bottom/nav-bar-bottom.component.html
@@ -1,1 +1,7 @@
-<p>nav-bar-bottom works!</p>
+<div class="player cero">
+    <div  class="row icons">
+        <img (click)="redirectHome()" class="icon-init" src="assets/inicio.png" alt="inicio">
+        <img (click)="redirectLogros()" class="icon-points" src="assets/logrosGray.png" alt="logros">
+        <img (click)="redirectHome()" class="icon-profile" src="assets/miembrosGray.png" alt="perfil">
+    </div>
+</div>
