--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,3 +117,39 @@ body {
     margin-left: 15px;
     margin-right: 15px;
 }
+.cero {
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+}
+.player {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    height: 90px;
+    justify-content: space-around;
+    background-color: rgba(196, 176, 176, 0.481);
+    img {
+        margin: auto 15px;
+    }
+}
+.welcome {
+    height: 600px;
+    overflow: scroll;
+    margin-bottom: 80px;
+}
+.word-welcome {
+    color: $colorprimario;
+    font-size: 20px;
+    font-weight: bold;
+}
+.bg-home {
+    background: url("/assets/semicircle.png");
+    background-repeat: no-repeat;
+    background-size: 390px 170px;
+    margin-bottom: 80px;
+}
+.margin-word{
+    margin-top:20px;
+    margin-bottom:10px;
+}
