--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -6,7 +6,7 @@
     <div class="enphasisSecond margin2">
         <p class="enphasis e-title">Iniciar sesión</p>
         <p>Ingresa tu DNI</p>
-        <input class="custom-input-text width-input" [(ngModel)]="DNI" type="text" placeholder="45983709"
+        <input class="custom-input-text width-input" [(ngModel)]="DNI" type="number" placeholder="45983709"
             name="" id="">
         <p>Ingresa tu contraseña</p>
         <input class="custom-input-text width-input" [(ngModel)]="password" type="password" required 
