change name in component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
 <div class="welcome bg-home enphasisSecond ">
     <!--  -->
     <div class="formWelcome">
-        <p class="word-welcome margin-word  ">¡Bienvenida <br> Familia (nombre)!</p>
+        <p class="word-welcome margin-word  ">¡Bienvenida <br> Familia Castilla!</p>
         <div class="center">
             <img src="assets/circlefamily.png" alt="familia">
             <div class="center level ">
