edit input repeat

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -60,10 +60,9 @@
         </div>
         <div class="enphasisSecond margin2">
             <p class="enphasis e-title">Crea tu contraseña</p>
-            <input class="custom-input-text width-input" type="text" name="" id="">
-            <p>Escribe tu contraseña</p>
-            <input class="custom-input-text width-input" type="text" name="" id="">
+            <input class="custom-input-text width-input" type="password" name="" id="">
             <p>Confirma tu contraseña</p>
+            <input class="custom-input-text width-input" type="password" name="" id="">
             <div class="center">
                 <button (click)="saveNewUser()" class="btn-red-c margin">Registrar</button>
             </div>
