--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,25 +4,25 @@
             <p class="enphasis e-title center">Ayu es tu aliado en el camino a cumplir tus metas</p>
             <img class="portada-img" src="assets/family/familyInLivingRoom.png" alt="">
         </div>
-        <div class="enphasisSecond">            
+        <div class="enphasisSecond">
             <div class="margin2">
                 <p>¿Cuál es tu nombre?</p>
-                <input class="custom-input-text width-input" [(ngModel)]="titularNombre" type="text" placeholder="Roberto" name=""
-                    id="" required>
+                <input class="custom-input-text width-input" [(ngModel)]="titularNombre" type="text"
+                    placeholder="Roberto" name="" id="" required>
                 <p>¿Cuál es tu apellido?</p>
                 <input class="custom-input-text width-input" required [(ngModel)]="titularApellido" type="text"
-                    placeholder="Perez Lopez" name="" id="">            
+                    placeholder="Perez Lopez" name="" id="">
                 <p>Ingresa tu DNI*</p>
-                <input class="custom-input-text width-input" required [(ngModel)]="titularDNI" type="number" placeholder="12345678"
-                    name="" id="">
+                <input class="custom-input-text width-input" required [(ngModel)]="titularDNI" type="number"
+                    placeholder="12345678" name="" id="">
                 <p>Ingresa tu numero telefónico</p>
-                <input class="custom-input-text width-input" required [(ngModel)]="titularTelefono" placeholder="934762000" type="numer"
-                    name="" id="">
+                <input class="custom-input-text width-input" required [(ngModel)]="titularTelefono"
+                    placeholder="934762000" type="numer" name="" id="">
             </div>
             <div class="center margin2">
                 <button (click)="nextView()" class="btn-red-c margin">Siguiente</button>
             </div>
-            
+
         </div>
     </div>
 
@@ -49,8 +49,10 @@
             </div>
         </div>
         <div>
-            <button class="btn-outline-red">Omitir</button>
-            <button (click)="lastNext()" class="btn-red-c">Siguiente</button>
+            <div class="row">
+                <button (click)="lastNext()" class="omit center">Omitir</button>
+                <button (click)="lastNext()" class="btn-red-c center">Siguiente</button>
+            </div>
         </div>
     </div>
     <div class="hide formThree">
